# spacesim

./: CMakeLists.txt
include/: Input.hpp  Renderer.hpp  SpaceObject.hpp  defines.hpp
src/: Input.cpp  Renderer.cpp  SpaceObject.cpp  main.cpp
